ndk added for submodules

--- a/ModuleA/src/main/res/layout/activity_main_activity.xml
+++ b/ModuleA/src/main/res/layout/activity_main_activity.xml
@@ -6,13 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivityA">
+
     <TextView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/tv_a"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="A"
-        android:textSize="30sp"/>
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
