user network module added

--- a/usermodule/src/main/res/layout/activity_main_activity.xml
+++ b/usermodule/src/main/res/layout/activity_main_activity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.myvaultspay.usermodule.MainActivityA">
+    tools:context="com.myvaultspay.usermodule.presentation.activity.MainActivityA">
 
     <TextView
         android:id="@+id/tv_a"
